--- a/gb/22/8/31/n13814625.md
+++ b/gb/22/8/31/n13814625.md
@@ -40,35 +40,40 @@
 <p><em>原文：<ahref="https://www.entrepreneur.com/article/415142">4 Critical Traits You Need to Build Wealth</a>刊于Entrepreneur网站。</em></p>
 <p><em>本文仅代表作者的观点和主张，内容仅作一般资讯参考用，没有任何推荐或招揽之用意。大纪元不提供投资、税务、法律、财务规划、房地产规划或其它个人理财的建议。大纪元不担保文章内容的准确性或时效性。</em></p>
 <p>责任编辑：茉莉</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/3/n10451222.md#1">投资专家 房地产投资的九条简单准则</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/23/n13787754.md#1">亿万富翁分享经营加盟店致富的秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/11/n13800340.md#1">多重收入是致富之道 5种创造被动收入的方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/18/n13805406.md#1">帮助你积累财富的10个好习惯</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/8/n9817670.md#1" target="_blank">汉清：百年沧桑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410876.md#1">【未解之谜】触摸UFO 美军人意外接获神秘信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404364.md#1">清朝名臣方观承官至总督 相士早预知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402150.md#1">元配宽容不伦婢女得到福报 正直知县因一念不容下场凄惨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412120.md#1">【未解之谜】痴迷好莱坞 《乱世佳人》剧作家转世重生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413507.md#1">【佳音时刻】川普就职庆典 亮点抢先看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413508.md#1">【纪元焦点】李宜雪案官报被指造假 洗白警方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403900.md#1">【中国禁闻】中国流行致命禽流感 官方掩盖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410788.md#1">高致命禽流感H5N1爆发 业内人士揭中共掩瞒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412447.md#1">银川成都天空惊现大量不明发光物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14412053.md#1">今年首个满月与火星相遇 如何观赏一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411428.md#1">吴京被喊话去缅甸诈骗区救中国人 评论区炸锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14411374.md#1">豪宅被烧毁 好莱坞明星梅尔·吉勃逊痛批纽森</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412852.md#1">请黄晓明呵护赵丽颖 李冰冰温暖话语登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412785.md#1">好莱坞明星救济受灾户 裘莉开放豪宅收容亲友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413305.md#1">淡出演艺圈多年 李威因北市精舍命案遭约谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412475.md#1">研究：人们常吃的海鲜中含有塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409423.md#1">百岁人瑞常吃食物前10名 选对食物抗老化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411695.md#1">什么是“肌肉记忆”？ 在生活中如何运用？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14395949.md#1">从不完美中解脱 学会欣赏自己 内心变更强大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408471.md#1">三招运动按摩法 祛湿排毒气色好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/8/n14502333.md#1">宰相肚里能撑船——北宋贤相王旦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520992.md#1">【古道人生】招了个强盗做女婿 差点惹大祸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542748.md#1">【直播】川普出席佛州奥乔皮市圆桌讨论会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542115.md#1">【百年真相】从延安到中南海 高官奢华特供揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542740.md#1">【直播】美参议院准备就“大而美法案”投票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541430.md#1">Lululemon起诉Costco出售露露柠檬仿冒品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541824.md#1">北京突抛中央决策机构条例 专家：证习失权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541585.md#1">地球神秘“心跳”正在分裂非洲大陆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542229.md#1">胡一天靠直播还房贷 “673天没进组”登热搜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542143.md#1">饰习仲勋夺白玉兰视帝 靳东惹网友不满和吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541038.md#1">贝克汉姆紧急动手术 螺丝嵌入骨头超惊悚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14541022.md#1">癌症恶化至第四期 前港姐吴文忻惊爆离婚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14541001.md#1">布莱德·彼特外出宣传新片 洛城豪宅遭歹徒洗劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541283.md#1">为什么我们会爱上不爱我们的人？ 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541558.md#1">南海海槽强震倒数中？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542520.md#1">研究：这样喝咖啡可以让你活久一点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541784.md#1">在地毯上喷洒这一物 可以防止灰尘黏住</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14536093.md#1">如何健康吃外食？营养师教你“无敌搭配术”</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/8/31/n13814625.htm">致富没有秘密 富人都有这4大特质 轻松理财</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/8/31/n13814625.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
