--- a/gb/23/7/29/n14044116.md
+++ b/gb/23/7/29/n14044116.md
@@ -13,7 +13,6 @@
 <p>三儿子回到自己房里，见到妻子在床沿上坐着，低声哭泣。三儿子不知这是为何，便问道：“眼看我两个哥哥要去省城应试，这本来就是件好事，你为啥不高兴？”</p>
 <p>妻子停止哭泣，叹道：“大伯二伯是读书人，有出息！你也是个读书人，为啥就没出息？人家是座上客，而你却在伙房拿吹火棍，这已经够丢人的了。如今还要叫你跟他们去省城当听差。你叫我在妯娌间如何抬得起头，如何有脸做人？”三儿子苦苦一笑，委屈万分，说：“你以为我心里高兴吗？只是父亲的命令不敢违抗啊！”妻子争辩道：“我不是叫你去违抗父命，我只是希望你有点志气，也去参加考试，为妻的可以光彩一些。”</p>
 <p>三儿子叹道：“唉，童生哪有资格去应考，只怪我生来命不好哟！”妻子说：“你这次去省城，必然要去看望丈人（妻子的父亲），他是管理库房的官员，出资报捐得监生资格就是他专门掌管的。我这里有些金银首饰和珠宝，你拿去给丈人为你捐得个监生，你不就可以参加考试了吗？”三儿子一听，高兴地顺从妻子的主意去做。</p>
-<figure id="attachment_14044123" aria-describedby="caption-attachment-14044123" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14044123-269c33840d2afd1c0f0ed9726f38e2c1.jpg"><img decoding="async" class="size-large wp-image-14044123" src="https://i.epochtimes.com/assets/uploads/2023/08/id14044123-269c33840d2afd1c0f0ed9726f38e2c1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14044123" class="wp-caption-text">“烧火三相公”的人生将发生怎样的转变？ (Pixabay)</figcaption></figure>
 <h2>第一次参加乡试 广结人缘</h2>
 <p>于是父兄四人一行到了省城，打点住下后，三儿子立即去见岳父大人，让他帮自己纳赀成为监生。他回去后就将这一讯息告诉父亲。召老夫子听到后很不高兴，说：“你是个绣花枕头，难道你自己还不清楚？为何要自欺欺人？你以为捐了个监生就能考取？你要考不取，我看你有哪样脸面去见你丈人？”</p>
 <p>等到公布考生名单时，三儿子果然榜上有名。这样，他就可以名正言顺地去参加乡试了。考试那天，三儿子就跟随两兄进入考场。因他食量很大，家里人就为他准备了绍酒、金蹄、烧鸭、熏鹅之类，满满一担子。三儿子进入考房，看见左右考房里的考生，都是些贫寒的秀士，于是，在进餐的时候，他就将自己丰盛的饭食慷慨地分与众位寒士，众寒士对他感激不已。</p>
@@ -29,7 +28,6 @@
 <p>大主考明知这话中有话，但自己已经有言在先，只好硬着头皮把召老三的文章看了一遍，煞有介事地拍案而起：“如此典雅广博的文章，难道不能取第一名吗？”说罢，举起笔来，就在考卷上密密麻麻地圈画起来，最后标为“第一名”。</p>
 <p>众考官一看那文章被定为“第一名”，不禁面面相觑，不敢作声。这时，副主考听到声音也来了。他拿起这篇文章一看，一边读一边笑，他向大主考说：“大人，这篇文章广是广了、博是博了，可惜肤浅浮泛，言之无物。”大主考仍坚持自己的决定，说：“这个第一名是我定的，与各位无干。张榜公布后，我自会奏弹章听候皇上处分。”众官员见大主考如此固执、倔强，知道事情已无法挽回，大家无言而退。就这样，烧火三相公居然考中举人第一名。</p>
 <h2>捷报揭晓</h2>
-<figure id="attachment_14044125" aria-describedby="caption-attachment-14044125" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14044125-4179f282b364317085b46cb179064714.jpg"><img decoding="async" class="size-large wp-image-14044125" src="https://i.epochtimes.com/assets/uploads/2023/08/id14044125-4179f282b364317085b46cb179064714-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14044125" class="wp-caption-text">杭州古宅 (Pixabay)</figcaption></figure>
 <p>这边召老夫子带着三个儿子搬到西湖边住下。发榜这天，他大设宴席，招待亲友，并等候发榜的佳音。酒席宴上，两位兄长把自己的得意之作给亲友们传看，一时赞颂之声不绝。三儿子则举碗端盘，忙着招呼客人。有人向他索取他写的文章拜读时，却遭到他父兄的辱骂。一些亲友为他抱不平，说：“既已参加了乡试，为什么不能平等对待呢？”于是拉着三儿子的手，去西湖一游，以消不平之气。正在这时，他们见到发榜报捷者飞马驰来，就问道：“这榜上有没有姓召的吗？”报捷者说“有”。三儿子高兴极了，说：“我哥哥考中了，考中了！”于是领着报捷者急急来到召老夫子面前。</p>
 <p>召家亲戚听说召家人考中了，都非常欢喜。报捷者先向老先生讨赏，并没有出示报条。召老夫子对众人说：“我大儿子早就该榜上有名的，如今才考中，已经是太晚了，所以不足为奇。”报捷者说：“老先生猜错了，考中者并非是大公子！”召老夫子有些惊诧：“难道是二儿子考中了，这也是意料中的事！”报捷者又说：“不是。”召老夫子最后又说：“这一定是主考官搞错了，烧火三相公哪能得中举人呢？”报捷者笑着说：“正是！”召老夫子不得已道：“如果真的是他考中，只属万幸而已，但即令中榜，也不过是副榜吧了！”</p>
 <p>大家听到了，开始热闹起来，说：“请先定赏例，等下开了报条便知。”召老夫子笑道：“好吧，如果是副榜，我就赏十金，如果是正榜，就加倍。”大伙又问：“如果是元魁呢？”召老夫子不加思索地说：“是魁就赏五十，如果是元，就赏百金！但绝对没有中元魁的理由。”众人让报捷者出示报条，召老三果然是名列第一！报捷者拿着所赏百金高兴而去。召老夫子这下真的愕然了：“烧火棍也能成了魁首举人，文风变化到这样一个地步，今后再不敢谈论什么圣贤文章了！”<em>（资料来源：《客窗闲话》）</em></p>
@@ -39,40 +37,39 @@
 <h2>─点阅【古道人生】系列─</h2>
 <p>责任编辑：古容</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287726.md#1">【古道人生】丈夫衣锦荣归 为何夫妻却不能团圆？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281251.md#1">【古道人生】孝子为救病父投崖代父死 出现了什么神迹？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268259.md#1">【古道人生】考生遭冤魂讨债 未来尚书善调停</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268258.md#1">【古道人生】地师为富家卜穴 为何最终给了佃户之子？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263161.md#1">【古道人生】媳妇煮蚯蚓给眼盲婆婆吃 即时招来天谴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254177.md#1">【古道人生】命中利北不利南 在南方一试难中 在北方则隆隆直上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254227.md#1">【古道人生】琴声上通神明下达鬼神的郭去非</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/7/n14219882.md#1">【古道人生】当强盗遇乞丐 才知乞丐原来是剑侠</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286009.md#1">菩萨赐白莲花？高僧虚云和章嘉国师的神奇经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/21/n13321190.md#1">【古韵流芳】长恨歌引传奇 白居易的来世夙愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292807.md#1">【时事军事】俄军坦克损失创纪录 战争还能持续多久</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293741.md#1">【新闻五人行】川普“索要保护费”言外有意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293560.md#1">【新闻大破解】“保单说”护台？川拜齐喊团结</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292157.md#1">方便面疑现鼠头 统一企业中国股价暴跌10%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291850.md#1">三中全会敏感期“川普遇刺T恤”被速下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292166.md#1">成龙新片《传说》票房翻车 出品方面临巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292239.md#1">《不可能8》汤姆克鲁斯再展特技 被倒飞飞机悬挂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292145.md#1">游法国遭路人溅一身可乐 肖战高EQ反应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291441.md#1">孙俪一家四口现身温网决赛 一对儿女近照曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291390.md#1">汤唯罕晒全家福 纪念与金泰勇结婚10周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291108.md#1">组图：八声杜鹃的歌声与美丽的身影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284863.md#1">夏季炎热更需保健 避开七种错误消暑方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291745.md#1">登机证有啥讯息？ 在网上晒照片有多危险？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292522.md#1">减肥太快会导致肌肉流失 专家透露3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284953.md#1">前列腺癌5大征兆！一药草提取物可预防</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544886.md#1">【佳音时刻】美越签协议 中共最怕的事将发生？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545000.md#1">【新闻大家谈】八炯：亲历统战 台湾需守住防线</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542957.md#1">末日预言疯传 唐绮阳坦言已录好影片交代一事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542863.md#1">鹿晗暴瘦被疑深陷情伤 陈赫帮好友回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543090.md#1">《奥德赛》首支预告片在影院播出 内容已流出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540339.md#1">走路容易累？改善走路姿势必学4招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/29/n14044116.htm">【古道人生】烧火三相公也能考上魁首举人？！</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/29/n14044116.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
